--- a/app/views/photos/new.slim
+++ b/app/views/photos/new.slim
@@ -1,5 +1,6 @@
 h1 Upload New Photo
 
-- form_for @photo, url: {action: "create"}, do |f|
+= form_for @photo do |f|
   = f.text_field :name
   = f.file_field :image
+  = f.submit :upload_photo
