--- a/app/views/photos/index.slim
+++ b/app/views/photos/index.slim
@@ -1,7 +1,11 @@
 h1 Photo Time!
 
-- @photos.each do |photo|
-  = image_tag photo.image.thumb('400x200#').url if photo.image_stored?
-  = link_to "Full Photo", photo_path(photo)
-
 = link_to "New Photo", new_photo_path
+
+.row
+  - @photos.each do |photo|
+    .col-sm-4
+      = link_to photo_path(photo) do
+        = image_tag photo.image.thumb('400x200#').url if photo.image_stored?
+      - photo.comments.each do |comment|
+        p = comment.content
